--- a/package.json
+++ b/package.json
@@ -20,5 +20,9 @@
     "eslint": "^9.28.0",
     "globals": "^16.2.0",
     "typescript-eslint": "^8.33.1"
+  },
+  "dependencies": {
+    "@axe-core/playwright": "^4.10.2",
+    "axios": "^1.10.0"
   }
 }
